--- a/app/src/main/res/layout/statusbar_text_icon.xml
+++ b/app/src/main/res/layout/statusbar_text_icon.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.android.systemui.statusbar.views.NetworkSpeedView
+<name.mikanoshi.customiuizer.utils.StatusBarTextIcon
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:tag="slot_text_icon"
 	android:gravity="end|center_vertical"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
